<resources>
    <string name="app_name">Bluetooth Yoklama</string>
    <string name="toggle_bluetooth">Bluetooth\'u Aç/Kapa</string>
    <string name="start_attendance">Yoklama Başlat</string>
    <string name="stop_attendance">Yoklamayı Durdur</string>
    <string name="show_records">Yoklama Kayıtları</string>
    <string name="bluetooth_on">Bluetooth Açık</string>
    <string name="bluetooth_off">Bluetooth\'u Aç</string>
    <string name="teacher_mode">Öğretmen Modu</string>
    <string name="student_mode">Öğrenci Modu</string>
    <string name="login">Giriş Yap</string>
    <string name="bluetooth_permission_required">Bluetooth İzni Gerekli</string>
    <string name="bluetooth_turning_off">Bluetooth kapatılıyor</string>
    <string name="bluetooth_permission_denied">Bluetooth izni reddedildi</string>
    <string name="all_permissions_granted">Tüm izinler verildi</string>
    <string name="all_permissions_already_granted">Tüm izinler zaten verilmiş</string>
    <string name="student_id_format">Öğrenci ID: %s</string>
    <string name="timestamp_format">Tarih: %s</string>
    <string name="stop_broadcast">Yayını Durdur</string>
    <string name="start_broadcast">Yayını Başlat</string>
    <string name="broadcast_start_error">Yayın başlatılamadı: %s</string>
    <string name="broadcast_active">Yoklama yayını aktif</string>
    <string name="broadcast_already_started">Yayın zaten başlatılmış</string>
    <string name="broadcast_data_too_large">Yayın verisi çok büyük</string>
    <string name="broadcast_not_supported">BLE yayını desteklenmiyor</string>
    <string name="broadcast_internal_error">Dahili hata</string>
    <string name="broadcast_too_many_advertisers">Çok fazla yayıncı</string>
    <string name="broadcast_unknown_error">Bilinmeyen hata: %d</string>
    <string name="broadcast_stopped">Yoklama gönderimi durduruldu</string>
    <string name="broadcast_started">Yoklama gönderiliyor...</string>
    <string name="broadcast_feature_unsupported">Bluetooth LE yayını desteklenmiyor</string>
    <string name="turn_on_bluetooth">Lütfen Bluetooth\'u açın</string>
    <string name="student_name_format">%1$s %2$s</string>
    <string name="student_number_format">Öğrenci No: %1$s</string>
    <string name="device_address_format">Cihaz: %1$s</string>
    <string name="attendance_success">Yoklamanız başarıyla alındı</string>
    <string name="attendance_failure">Yoklama alınamadı, lütfen tekrar deneyin</string>
    <string name="student_id_hint">Öğrenci ID *</string>
    <string name="student_name_hint">Ad *</string>
    <string name="student_surname_hint">Soyad *</string>
    <string name="student_number_hint">Öğrenci Numarası</string>
    <string name="save_and_continue">Kaydet ve Devam Et</string>
    <string name="fill_required_fields">Lütfen ad ve soyad alanlarını doldurun</string>
    <string name="student_info_format">%1$s %2$s (%3$s)</string>
    <string name="edit_info">Bilgileri Düzenle</string>
    <string name="broadcast_stop_error">Yayın durdurulamadı: %s</string>
    <string name="attendance_records">Yoklama Kayıtları</string>
    <string name="student_login">Öğrenci Girişi</string>
    <string name="broadcast_failed">Yoklama gönderilemedi</string>
    <string name="broadcast_completed">Yoklama gönderimi tamamlandı</string>
    <string name="status_idle">Hazır</string>
    <string name="course_name_hint">Ders Adı</string>
    <string name="logout">Çıkış Yap</string>
</resources>